# profile.ivi.genivi.genivi-audio-manager

./: .gbs.conf  CMakeLists.txt  README  project.config  run-cmake.sh
AudioManagerDaemon/include/: CAmControlReceiver.h  CAmDatabaseHandlerMap.h
AudioManagerDaemon/src/: CAmControlReceiver.cpp  CAmDltWrapper.cpp  CAmSocketHandler.cpp  main.cpp
PluginCommandInterfaceDbus/: CMakeLists.txt
PluginCommandInterfaceDbus/include/: configCommandDbus.h
PluginControlInterface/: CMakeLists.txt
PluginControlInterfaceDbus/: CMakeLists.txt
PluginControlInterfaceDbus/cmake/: config.cmake
PluginControlInterfaceDbus/include/: CAmControlDbusMessageHandler.h  CAmControlDbusSend.h  CAmControlSenderBase.h  ControlReceiver.xml  IAmControlReceiverDbusShadow.h  configControlDbus.h
PluginControlInterfaceDbus/src/: CAmControlDbusMessageHandler.cpp  CAmControlDbusSend.cpp  CAmControlSenderBase.cpp  IAmControlReceiverShadow.cpp
PluginControlInterfaceMurphy/: CMakeLists.txt
PluginControlInterfaceMurphy/include/: CAmControlSenderMurphy.h  Connection.h  Event.h  MurphyInterface.h  MurphyMainloop.h  StateMachine.h  Transition.h  TransitionRoutines.h
PluginControlInterfaceMurphy/src/: CAmControlSenderMurphy.cpp  Connection.cpp  Event.cpp  MurphyInterface.cpp  MurphyMainloop.cpp  StateMachine.cpp  (+2 more)
PluginRoutingInterfaceAsync/: CMakeLists.txt
PluginRoutingInterfaceDbus/: CMakeLists.txt
cmake/: FindDBUS.cmake  FindMURPHY.cmake
domain-manager/: CMakeLists.txt  ini-lex.l  ini-parser.c  ini-parser.h  ini.y  main.c
packaging/: genivi-audio-manager.changes  genivi-audio-manager.spec
(+2 files in other folders)
