cmake_minimum_required(VERSION 2.6)

PROJECT(domain-manager)

set(DOC_OUTPUT_PATH ${DOC_OUTPUT_PATH}/AudioManager)
set(INCLUDE_FOLDER "include")

FIND_PACKAGE(MURPHY REQUIRED)
FIND_PACKAGE(DBUS REQUIRED)

FIND_PACKAGE(FLEX REQUIRED)
FIND_PACKAGE(BISON REQUIRED)
FLEX_TARGET(IniScanner ini-lex.l ${CMAKE_CURRENT_SOURCE_DIR}/ini-lex.c)
BISON_TARGET(IniParser ini.y ${CMAKE_CURRENT_SOURCE_DIR}/ini.tab.c HEADER ${CMAKE_CURRENT_SOURCE_DIR}/ini.tab.h COMPILE_FLAGS "-d -p ini_parser_")
ADD_FLEX_BISON_DEPENDENCY(IniScanner IniParser)

SET(DOMAIN_MANAGER_SOURCES
    ${BISON_IniParser_OUTPUTS}
    ${FLEX_IniScanner_OUTPUTS}
    ini-parser.c
    main.c
)

INCLUDE_DIRECTORIES(
    ${DBUS_INCLUDE_DIR}
    ${DBUS_ARCH_INCLUDE_DIR}
    ${MURPHY_INCLUDE_DIR}
)

ADD_EXECUTABLE(domain-manager ${DOMAIN_MANAGER_SOURCES})

TARGET_LINK_LIBRARIES(domain-manager
    ${MURPHY_LIBRARY}
    ${DBUS_LIBRARY}
)

INSTALL(TARGETS domain-manager
        RUNTIME
        DESTINATION bin
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
        COMPONENT bin
)

SET(ADD_DEPEND_BIN_PROP "murphy")

set_property(GLOBAL APPEND PROPERTY bin_prop "${ADD_DEPEND_BIN_PROP}")
